Fix text alignment

--- a/assets/src/admin.scss
+++ b/assets/src/admin.scss
@@ -8,22 +8,18 @@
 		width: 20px;
 		color: white;
 		font-size: 12px;
-		box-sizing: border-box;
+		text-align: center;
 
 		&--green {
-			padding-left: 6px;
 			background-color: #3fc21e;
 		}
 		&--red {
-			padding-left: 7px;
 			background-color: #d42127;
 		}
 		&--orange {
-			padding-left: 6.5px;
 			background-color: #f67428;
 		}
 		&--yellow {
-			padding-left: 4.5px;
 			background-color: #f3b81c;
 		}
 	}
